name:        naqsha-openstreetmap
version:     0.2.0.1
category:    Geospatial, OpenStreetMap, Naqsha
synopsis:    Open Street Map support in Naqsha
description: This library exposes support for the Open Street Map project.
homepage:    http://github.com/naqsha/naqsha-openstreetmap

author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
license:      BSD3
license-file: LICENSE


build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules:
  build-depends: base                         >=4.9 && <4.11

test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base
               , hspec-discover