name:        naqsha-openstreetmap
version:     0.2.0.1
category:    Geospatial, OpenStreetMap, Naqsha
synopsis:    Open Street Map support in Naqsha
description: This library exposes support for the Open Street Map project.
homepage:    http://github.com/naqsha/naqsha-openstreetmap

author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
license:      BSD3
license-file: LICENSE


build-type:    Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules: Naqsha.OpenStreetMap
                 , Naqsha.OpenStreetMap.Database
                 , Naqsha.OpenStreetMap.Element
                 , Naqsha.OpenStreetMap.ID
                 , Naqsha.OpenStreetMap.Language
                 , Naqsha.OpenStreetMap.Tags
                 , Naqsha.OpenStreetMap.Api

  other-modules: Naqsha.OpenStreetMap.Internal
               , Naqsha.OpenStreetMap.Api.XML
               , Naqsha.OpenStreetMap.Api.Info
               , Naqsha.OpenStreetMap.Api.ContentTypes

               , Paths_naqsha_openstreetmap
  build-depends: base                         >=4.9 && < 4.11
               , containers
               , data-default
               , hashable
               , http-media
               , lens
               , naqsha                       > 0.2 && < 0.3
               , servant
               , text
               , time
               , unordered-containers
               , vector
               , xml-conduit

executable server-example
  hs-source-dirs: example/server
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base
               , data-default
               , servant-server
               , naqsha-openstreetmap
               , wai
               , warp


test-Suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base
               , hspec-discover
